--- a/admin.html
+++ b/admin.html
@@ -274,6 +274,7 @@
                                 <th>ID</th>
                                 <th>Name</th>
                                 <th>Kategorie</th>
+                                <th>Preis 50ml</th>
                                 <th>Aktionen</th>
                             </tr>
                         </thead>
@@ -311,37 +312,69 @@
         </div>
     </div>
 
-    <!-- Add/Edit Modal -->
-    <div class="modal" id="productFormModal">
-        <div class="modal-content">
+    <!-- Edit Modal -->
+    <div class="modal" id="editModal">
+        <div class="modal-content" style="max-width: 560px;">
             <div class="modal-header">
-                <h3 id="modalTitle">Parfum hinzufügen</h3>
-                <button class="close-btn" onclick="closeModal()">&times;</button>
+                <h3>Produkt bearbeiten &ndash; <span id="edit-modal-id" style="color: #888; font-weight: 400;"></span>
+                </h3>
+                <button class="close-btn" onclick="closeEditModal()">&times;</button>
             </div>
-            <div class="form-container">
-                <div class="input-group">
-                    <label>Produkt-ID (z.B. L1)</label>
-                    <input type="text" id="p-id">
-                </div>
-                <div class="input-group">
+            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
+                <div class="input-group" style="grid-column: 1 / -1; margin-bottom: 0;">
                     <label>Name</label>
-                    <input type="text" id="p-name">
+                    <input type="text" id="edit-name"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
                 </div>
-                <div class="input-group">
+                <div class="input-group" style="grid-column: 1 / -1; margin-bottom: 0;">
                     <label>Inspired By</label>
-                    <input type="text" id="p-inspired">
+                    <input type="text" id="edit-inspired"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
                 </div>
-                <div class="input-group">
-                    <label>Preis 50ml (€)</label>
-                    <input type="number" step="0.01" id="p-price-50">
+                <div class="input-group" style="grid-column: 1 / -1; margin-bottom: 0;">
+                    <label>Kurzbeschreibung</label>
+                    <input type="text" id="edit-description"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
                 </div>
-                <div class="input-group">
-                    <label>Preis 30ml (€)</label>
-                    <input type="number" step="0.01" id="p-price-30">
+                <div class="input-group" style="margin-bottom: 0;">
+                    <label>Kategorie</label>
+                    <select id="edit-category"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;">
+                        <option value="women">Damen</option>
+                        <option value="men">Herren</option>
+                        <option value="unisex">Unisex</option>
+                    </select>
                 </div>
-                <!-- TODO: weitere Felder... -->
-                <button class="btn" onclick="saveProduct()">Speichern (Demnächst)</button>
+                <div style="grid-column: 1 / -1; border-top: 1px solid #eee; padding-top: 1rem; margin-top: 0.5rem;">
+                    <strong style="font-size: 0.85rem; color: #636e72;">Preise</strong>
+                </div>
+                <div class="input-group" style="margin-bottom: 0;">
+                    <label>Preis 30ml (EUR)</label>
+                    <input type="number" step="0.01" id="edit-price-30"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <div class="input-group" style="margin-bottom: 0;">
+                    <label>Streichpreis 30ml (EUR) - optional</label>
+                    <input type="number" step="0.01" id="edit-orig-30" placeholder="leer = kein Streichpreis"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <div class="input-group" style="margin-bottom: 0;">
+                    <label>Preis 50ml (EUR)</label>
+                    <input type="number" step="0.01" id="edit-price-50"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <div class="input-group" style="margin-bottom: 0;">
+                    <label>Streichpreis 50ml (EUR) - optional</label>
+                    <input type="number" step="0.01" id="edit-orig-50" placeholder="leer = kein Streichpreis"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
             </div>
+            <div style="margin-top: 1.5rem; display: flex; gap: 1rem;">
+                <button class="btn" onclick="saveEdit()" style="flex: 1;">Speichern</button>
+                <button onclick="closeEditModal()"
+                    style="flex: 1; padding: 0.8rem; border: 1px solid #ccc; background: none; border-radius: 4px; cursor: pointer;">Abbrechen</button>
+            </div>
+            <p id="edit-status" style="margin-top: 1rem; font-size: 0.9rem; text-align: center; display: none;"></p>
         </div>
     </div>
 
