--- a/admin.html
+++ b/admin.html
@@ -72,11 +72,65 @@
             color: #fff;
             padding: 0.8rem 1.5rem;
             border: none;
-            border-radius: 4px;
+            border-radius: 6px;
             cursor: pointer;
             font-weight: 500;
             width: 100%;
             font-size: 1rem;
+            transition: all 0.2s ease;
+            letter-spacing: 0.02em;
+        }
+
+        .btn:hover {
+            opacity: 0.88;
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        }
+
+        .btn-edit {
+            display: inline-flex;
+            align-items: center;
+            gap: 5px;
+            padding: 0.35rem 0.85rem;
+            font-size: 0.78rem;
+            font-weight: 600;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            background: #e8f4fd;
+            color: #1a73e8;
+            letter-spacing: 0.02em;
+        }
+
+        .btn-edit:hover {
+            background: #1a73e8;
+            color: #fff;
+            box-shadow: 0 3px 10px rgba(26, 115, 232, 0.3);
+            transform: translateY(-1px);
+        }
+
+        .btn-delete {
+            display: inline-flex;
+            align-items: center;
+            gap: 5px;
+            padding: 0.35rem 0.85rem;
+            font-size: 0.78rem;
+            font-weight: 600;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            background: #fdecea;
+            color: #d93025;
+            letter-spacing: 0.02em;
+        }
+
+        .btn-delete:hover {
+            background: #d93025;
+            color: #fff;
+            box-shadow: 0 3px 10px rgba(217, 48, 37, 0.3);
+            transform: translateY(-1px);
         }
 
         #dashboard {
