Design: compact square icon-only action buttons

--- a/admin.html
+++ b/admin.html
@@ -90,47 +90,47 @@
         .btn-edit {
             display: inline-flex;
             align-items: center;
-            gap: 5px;
-            padding: 0.35rem 0.85rem;
-            font-size: 0.78rem;
-            font-weight: 600;
+            justify-content: center;
+            width: 34px;
+            height: 34px;
             border: none;
-            border-radius: 6px;
+            border-radius: 8px;
             cursor: pointer;
-            transition: all 0.2s ease;
-            background: #e8f4fd;
+            transition: all 0.18s ease;
+            background: #e8f0fe;
             color: #1a73e8;
-            letter-spacing: 0.02em;
+            font-size: 0.9rem;
+            flex-shrink: 0;
         }
 
         .btn-edit:hover {
             background: #1a73e8;
             color: #fff;
-            box-shadow: 0 3px 10px rgba(26, 115, 232, 0.3);
-            transform: translateY(-1px);
+            box-shadow: 0 4px 14px rgba(26, 115, 232, 0.35);
+            transform: translateY(-2px) scale(1.08);
         }
 
         .btn-delete {
             display: inline-flex;
             align-items: center;
-            gap: 5px;
-            padding: 0.35rem 0.85rem;
-            font-size: 0.78rem;
-            font-weight: 600;
+            justify-content: center;
+            width: 34px;
+            height: 34px;
             border: none;
-            border-radius: 6px;
+            border-radius: 8px;
             cursor: pointer;
-            transition: all 0.2s ease;
-            background: #fdecea;
+            transition: all 0.18s ease;
+            background: #fce8e6;
             color: #d93025;
-            letter-spacing: 0.02em;
+            font-size: 0.9rem;
+            flex-shrink: 0;
         }
 
         .btn-delete:hover {
             background: #d93025;
             color: #fff;
-            box-shadow: 0 3px 10px rgba(217, 48, 37, 0.3);
-            transform: translateY(-1px);
+            box-shadow: 0 4px 14px rgba(217, 48, 37, 0.35);
+            transform: translateY(-2px) scale(1.08);
         }
 
         #dashboard {
