--- a/admin.html
+++ b/admin.html
@@ -320,10 +320,46 @@
                     <button class="btn" style="width: auto;" onclick="openAddModal()"><i class="fas fa-plus"></i> Neues
                         Parfum</button>
                 </div>
+
+                <!-- Bulk Action Panel -->
+                <div id="bulk-panel"
+                    style="display:none; background:#fff; border:1px solid #dcdde1; border-radius:8px; padding:1rem 1.5rem; margin-bottom:1.5rem; box-shadow:0 2px 8px rgba(0,0,0,0.04);">
+                    <div style="display:flex; align-items:center; flex-wrap:wrap; gap:1rem;">
+                        <span id="bulk-count-label"
+                            style="font-weight:600; font-size:0.95rem; white-space:nowrap; color:#2d3436;">0
+                            ausgew&auml;hlt</span>
+                        <div style="display:flex; align-items:center; gap:0.5rem; flex-wrap:wrap;">
+                            <label style="font-size:0.85rem; color:#636e72;">Preis 30ml</label>
+                            <input type="number" step="0.01" id="bulk-price-30" placeholder="z.B. 19.99"
+                                style="width:110px; padding:0.45rem 0.6rem; border:1px solid #ccc; border-radius:6px;">
+                            <label style="font-size:0.85rem; color:#636e72;">Preis 50ml</label>
+                            <input type="number" step="0.01" id="bulk-price-50" placeholder="z.B. 29.99"
+                                style="width:110px; padding:0.45rem 0.6rem; border:1px solid #ccc; border-radius:6px;">
+                            <label style="font-size:0.85rem; color:#636e72;">Streichpreis 30ml</label>
+                            <input type="number" step="0.01" id="bulk-orig-30" placeholder="optional"
+                                style="width:110px; padding:0.45rem 0.6rem; border:1px solid #ccc; border-radius:6px;">
+                            <label style="font-size:0.85rem; color:#636e72;">Streichpreis 50ml</label>
+                            <input type="number" step="0.01" id="bulk-orig-50" placeholder="optional"
+                                style="width:110px; padding:0.45rem 0.6rem; border:1px solid #ccc; border-radius:6px;">
+                        </div>
+                        <button class="btn" onclick="applyBulkUpdate()"
+                            style="width:auto; padding:0.55rem 1.2rem; font-size:0.9rem; background:#1a73e8;">
+                            <i class="fas fa-bolt"></i> Auf Auswahl anwenden
+                        </button>
+                        <button onclick="selectAll(true)"
+                            style="background:none; border:none; color:#1a73e8; cursor:pointer; font-size:0.85rem; text-decoration:underline;">Alle
+                            w&auml;hlen</button>
+                        <button onclick="selectAll(false)"
+                            style="background:none; border:none; color:#636e72; cursor:pointer; font-size:0.85rem; text-decoration:underline;">Keine</button>
+                        <span id="bulk-status" style="font-size:0.85rem; display:none;"></span>
+                    </div>
+                </div>
                 <div class="card">
                     <table>
                         <thead>
                             <tr>
+                                <th style="width:36px;"><input type="checkbox" id="select-all-cb"
+                                        onchange="selectAll(this.checked)" title="Alle auswaehlen"></th>
                                 <th>Bild</th>
                                 <th>ID</th>
                                 <th>Name</th>
