Feat: show selected ID chips in bulk panel with X to deselect

--- a/admin.html
+++ b/admin.html
@@ -353,6 +353,10 @@
                             style="background:none; border:none; color:#636e72; cursor:pointer; font-size:0.85rem; text-decoration:underline;">Keine</button>
                         <span id="bulk-status" style="font-size:0.85rem; display:none;"></span>
                     </div>
+                    <!-- Selected ID chips (shown when <= 10 selected) -->
+                    <div id="bulk-chips"
+                        style="display:none; flex-wrap:wrap; gap:6px; margin-top:0.75rem; padding-top:0.75rem; border-top:1px solid #f0f0f0;">
+                    </div>
                 </div>
                 <div class="card">
                     <table>
