--- a/admin.html
+++ b/admin.html
@@ -472,6 +472,115 @@
         </div>
     </div>
 
+    <!-- Add Product Modal -->
+    <div class="modal" id="addModal">
+        <div class="modal-content" style="max-width: 600px;">
+            <div class="modal-header">
+                <h3><i class="fas fa-plus" style="color:#1a73e8;margin-right:8px;"></i>Neues Parfum hinzuf&uuml;gen</h3>
+                <button class="close-btn" onclick="closeAddModal()">&times;</button>
+            </div>
+            <div style="display:grid; grid-template-columns:1fr 1fr; gap:1rem;">
+                <!-- Row 1: ID + Kategorie -->
+                <div class="input-group" style="margin-bottom:0;">
+                    <label>Produkt-ID <span style="color:#e74c3c;">*</span></label>
+                    <input type="text" id="add-id" placeholder="z.B. L42 oder G15"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                    <small style="color:#888;">Muss einzigartig sein (kein Duplikat)</small>
+                </div>
+                <div class="input-group" style="margin-bottom:0;">
+                    <label>Kategorie <span style="color:#e74c3c;">*</span></label>
+                    <select id="add-category"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;">
+                        <option value="women">Damen</option>
+                        <option value="men">Herren</option>
+                        <option value="unisex">Unisex</option>
+                    </select>
+                </div>
+                <!-- Row 2: Name full width -->
+                <div class="input-group" style="grid-column:1/-1; margin-bottom:0;">
+                    <label>Name <span style="color:#e74c3c;">*</span></label>
+                    <input type="text" id="add-name" placeholder="z.B. NØTE No. 42"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <!-- Row 3: Inspired By full width -->
+                <div class="input-group" style="grid-column:1/-1; margin-bottom:0;">
+                    <label>Inspired By</label>
+                    <input type="text" id="add-inspired" placeholder="z.B. Creed Aventus"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <!-- Row 4: Description full width -->
+                <div class="input-group" style="grid-column:1/-1; margin-bottom:0;">
+                    <label>Kurzbeschreibung</label>
+                    <input type="text" id="add-description" placeholder="Ein kurzer Satz ueber den Duft..."
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <!-- Row 5: Image URLs -->
+                <div class="input-group" style="grid-column:1/-1; margin-bottom:0;">
+                    <label>Bild-URL (Hauptbild)</label>
+                    <input type="text" id="add-image1" placeholder="https://... oder relativer Pfad"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <div class="input-group" style="grid-column:1/-1; margin-bottom:0;">
+                    <label>Bild-URL 2 (optional)</label>
+                    <input type="text" id="add-image2" placeholder="https://... zweites Bild"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <!-- Divider: Duftnoten -->
+                <div style="grid-column:1/-1; border-top:1px solid #eee; padding-top:1rem; margin-top:0.25rem;">
+                    <strong style="font-size:0.85rem; color:#636e72;">Duftnoten (optional)</strong>
+                </div>
+                <div class="input-group" style="margin-bottom:0;">
+                    <label>Kopfnote</label>
+                    <input type="text" id="add-note-head" placeholder="z.B. Bergamotte, Zitrone"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <div class="input-group" style="margin-bottom:0;">
+                    <label>Herznote</label>
+                    <input type="text" id="add-note-heart" placeholder="z.B. Rose, Jasmin"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <div class="input-group" style="grid-column:1/-1; margin-bottom:0;">
+                    <label>Basisnote</label>
+                    <input type="text" id="add-note-base" placeholder="z.B. Moschus, Sandelholz, Vanille"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <!-- Divider: Preise -->
+                <div style="grid-column:1/-1; border-top:1px solid #eee; padding-top:1rem; margin-top:0.25rem;">
+                    <strong style="font-size:0.85rem; color:#636e72;">Preise <span
+                            style="color:#e74c3c;">*</span></strong>
+                </div>
+                <div class="input-group" style="margin-bottom:0;">
+                    <label>Preis 30ml (EUR)</label>
+                    <input type="number" step="0.01" id="add-price-30" placeholder="19.99"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <div class="input-group" style="margin-bottom:0;">
+                    <label>Streichpreis 30ml (EUR)</label>
+                    <input type="number" step="0.01" id="add-orig-30" placeholder="optional"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <div class="input-group" style="margin-bottom:0;">
+                    <label>Preis 50ml (EUR)</label>
+                    <input type="number" step="0.01" id="add-price-50" placeholder="29.99"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+                <div class="input-group" style="margin-bottom:0;">
+                    <label>Streichpreis 50ml (EUR)</label>
+                    <input type="number" step="0.01" id="add-orig-50" placeholder="optional"
+                        style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;">
+                </div>
+            </div>
+            <div style="margin-top:1.5rem; display:flex; gap:1rem;">
+                <button class="btn" onclick="saveNewProduct()" style="flex:1;background:#1a73e8;">
+                    <i class="fas fa-plus"></i> Parfum anlegen
+                </button>
+                <button onclick="closeAddModal()"
+                    style="flex:1; padding:0.8rem; border:1px solid #ccc; background:none; border-radius:4px; cursor:pointer;">Abbrechen</button>
+            </div>
+            <p id="add-status" style="margin-top:1rem; font-size:0.9rem; text-align:center; display:none;"></p>
+        </div>
+    </div>
+
     <script src="admin.js"></script>
 </body>
 
