Feat: auto-suggest next product ID by category on modal open and category switch

--- a/admin.html
+++ b/admin.html
@@ -489,7 +489,7 @@
                 </div>
                 <div class="input-group" style="margin-bottom:0;">
                     <label>Kategorie <span style="color:#e74c3c;">*</span></label>
-                    <select id="add-category"
+                    <select id="add-category" onchange="onAddCategoryChange()"
                         style="width:100%;padding:0.6rem;border:1px solid #ccc;border-radius:4px;">
                         <option value="women">Damen</option>
                         <option value="men">Herren</option>
