--- a/product.html
+++ b/product.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="de">
 
 <head>
@@ -18,28 +18,28 @@
     <div class="top-banner">
         <div class="top-banner-track">
             <div class="top-banner-item">
-                <span class="top-banner-icon">⚡</span>
-                SCHNELLER VERSAND: 1–3 WERKTAGE
+                <span class="top-banner-icon">âš¡</span>
+                SCHNELLER VERSAND: 1â€“3 WERKTAGE
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">📦</span>
-                KOSTENLOSER VERSAND & RÜCKVERSAND AB 50&nbsp;€ (DE)
+                <span class="top-banner-icon">ðŸ“¦</span>
+                KOSTENLOSER VERSAND & RÃœCKVERSAND AB 50&nbsp;â‚¬ (DE)
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">↩︎</span>
-                30 TAGE RÜCKGABERECHT
+                <span class="top-banner-icon">â†©ï¸Ž</span>
+                30 TAGE RÃœCKGABERECHT
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">⚡</span>
-                SCHNELLER VERSAND: 1–3 WERKTAGE
+                <span class="top-banner-icon">âš¡</span>
+                SCHNELLER VERSAND: 1â€“3 WERKTAGE
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">📦</span>
-                KOSTENLOSER VERSAND & RÜCKVERSAND AB 50&nbsp;€ (DE)
+                <span class="top-banner-icon">ðŸ“¦</span>
+                KOSTENLOSER VERSAND & RÃœCKVERSAND AB 50&nbsp;â‚¬ (DE)
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">↩︎</span>
-                30 TAGE RÜCKGABERECHT
+                <span class="top-banner-icon">â†©ï¸Ž</span>
+                30 TAGE RÃœCKGABERECHT
             </div>
         </div>
     </div>
@@ -51,15 +51,15 @@
                 <i class="fas fa-bars"></i>
             </div>
             <a href="index.html" class="logo-container">
-                <span class="logo-main">NØTE.</span>
+                <span class="logo-main">NÃ˜TE.</span>
                 <span class="logo-sub">fragrances</span>
             </a>
             <div class="nav-links">
                 <button class="close-menu-btn" onclick="toggleMobileMenu()">&times;</button>
                 <a href="index.html#kollektion-entdecken">Kollektion</a>
-                <a href="frauenduefte.html">Frauendüfte</a>
-                <a href="herrenduefte.html">Herrendüfte</a>
-                <a href="ueber-uns.html">Über uns</a>
+                <a href="frauenduefte.html">FrauendÃ¼fte</a>
+                <a href="herrenduefte.html">HerrendÃ¼fte</a>
+                <a href="ueber-uns.html">Ãœber uns</a>
                 <a href="kontakt.html">Kontakt</a>
             </div>
             <div class="nav-icons">
@@ -104,7 +104,7 @@
     <!-- Product Detail -->
     <div class="product-detail-page section">
         <div class="container">
-            <a href="index.html" class="back-link">← Zurück zur Übersicht</a>
+            <a href="index.html" class="back-link">â† ZurÃ¼ck zur Ãœbersicht</a>
 
             <div class="detail-container">
                 <!-- Gallery -->
@@ -152,11 +152,11 @@
                     <ul class="benefits-list">
                         <li>
                             <div class="icon-anim anim-float"><i class="fas fa-droplet"></i></div>
-                            <span>Extrait de Parfum (40% Ölanteil)</span>
+                            <span>Extrait de Parfum (40% Ã–lanteil)</span>
                         </li>
                         <li>
                             <div class="icon-anim anim-pulse"><i class="far fa-clock"></i></div>
-                            <span>Hält den ganzen Tag (8h+)</span>
+                            <span>HÃ¤lt den ganzen Tag (8h+)</span>
                         </li>
                         <li>
                             <div class="icon-anim anim-wiggle"><i class="fas fa-leaf"></i></div>
@@ -185,10 +185,10 @@
                     <div class="trust-badges">
                         <div class="shipping-info justify-center">
                             <i class="fas fa-truck icon-truck"></i>
-                            <span>Kostenloser Versand & Rückversand ab 50&nbsp;€</span>
+                            <span>Kostenloser Versand & RÃ¼ckversand ab 50&nbsp;â‚¬</span>
                         </div>
                         <div class="stock-status">
-                            ● Auf Lager, sofort versandfertig
+                            â— Auf Lager, sofort versandfertig
                         </div>
 
                         <div class="delivery-timeline">
@@ -267,14 +267,32 @@
                                     Geraniol, Citral, Coumarin.</p>
                             </div>
                         </div>
+                        <!-- Vorsicht -->
+                        <div class="accordion-item">
+                            <button class="accordion-header">
+                                <span><i class="fas fa-exclamation-triangle" style="color:#e67e22;margin-right:0.4rem;"></i>Vorsicht</span>
+                                <i class="fas fa-plus"></i>
+                            </button>
+                            <div class="accordion-content">
+                                <p style="text-align:center;font-weight:600;letter-spacing:0.03em;line-height:1.8;text-transform:uppercase;font-size:0.9rem;">
+                                    Bis zum Trocknen entz&uuml;ndlich.<br>
+                                    Nicht in der N&auml;he von Feuer,<br>
+                                    Flammen oder Hitze verwenden<br>
+                                    und nicht in die Augen spr&uuml;hen.
+                                </p>
+                                <p style="text-align:center;margin-top:1rem;font-size:0.85rem;color:#555;">
+                                    Hersteller: Note-Fragrances
+                                </p>
+                            </div>
+                        </div>
                         <div class="accordion-item">
                             <button class="accordion-header">
                                 <span>Versand & Retoure</span>
                                 <i class="fas fa-plus"></i>
                             </button>
                             <div class="accordion-content">
-                                <p>Wir versenden innerhalb von 24 Stunden. Die Lieferzeit beträgt 1-3 Werktage.
-                                    Kostenloser Versand und Rückversand innerhalb Deutschlands. 30 Tage Rückgaberecht.
+                                <p>Wir versenden innerhalb von 24 Stunden. Die Lieferzeit betrÃ¤gt 1-3 Werktage.
+                                    Kostenloser Versand und RÃ¼ckversand innerhalb Deutschlands. 30 Tage RÃ¼ckgaberecht.
                                 </p>
                             </div>
                         </div>
@@ -293,17 +311,17 @@
                 <i class="fas fa-shopping-bag"></i>
                 <span>Warenkorb (<span id="cart-count-header">0</span>)</span>
             </div>
-            <button class="close-cart" onclick="toggleCart()">×</button>
+            <button class="close-cart" onclick="toggleCart()">Ã—</button>
         </div>
 
         <div class="cart-notification">
             <i class="fas fa-fire"></i>
-            <span>Hohe Nachfrage! Deine Bestellung ist für <span id="cart-timer">10:00</span> reserviert.</span>
+            <span>Hohe Nachfrage! Deine Bestellung ist fÃ¼r <span id="cart-timer">10:00</span> reserviert.</span>
         </div>
 
         <div class="shipping-progress-container">
             <div class="shipping-text" id="shipping-message">
-                Noch 50,00 € bis zu kostenlosem Versand
+                Noch 50,00 â‚¬ bis zu kostenlosem Versand
             </div>
             <div class="progress-bar-bg">
                 <div class="progress-bar-fill" id="shipping-progress-bar"></div>
@@ -329,19 +347,19 @@
 
             <div class="summary-row">
                 <span>Zwischensumme</span>
-                <span id="cart-subtotal">0.00 €</span>
+                <span id="cart-subtotal">0.00 â‚¬</span>
             </div>
             <div class="summary-row" id="discount-row" style="display: none;">
                 <span>Rabatt</span>
-                <span id="cart-discount-amount">-0.00 €</span>
+                <span id="cart-discount-amount">-0.00 â‚¬</span>
             </div>
             <div class="summary-row">
                 <span>Versand</span>
-                <span id="cart-shipping-cost">4.90 €</span>
+                <span id="cart-shipping-cost">4.90 â‚¬</span>
             </div>
             <div class="summary-row total-row">
                 <span>Gesamtsumme</span>
-                <span id="cart-total">0.00 €</span>
+                <span id="cart-total">0.00 â‚¬</span>
             </div>
 
             <button class="btn-checkout" onclick="checkout()">
