Fix: repair all corrupted German characters (encoding issue from PowerShell operations)

--- a/product.html
+++ b/product.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="de">
 
 <head>
@@ -23,11 +23,11 @@
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">ðŸ“¦</span>
-                KOSTENLOSER VERSAND & RÃœCKVERSAND AB 50&nbsp;â‚¬ (DE)
+                KOSTENLOSER VERSAND &amp; R&Uuml;CKVERSAND AB 50&nbsp;&euro; (DE)
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">â†©ï¸Ž</span>
-                30 TAGE RÃœCKGABERECHT
+                30 TAGE R&Uuml;CKGABERECHT
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">âš¡</span>
@@ -35,7 +35,7 @@
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">ðŸ“¦</span>
-                KOSTENLOSER VERSAND & RÃœCKVERSAND AB 50&nbsp;â‚¬ (DE)
+                KOSTENLOSER VERSAND &amp; R&Uuml;CKVERSAND AB 50&nbsp;&euro; (DE)
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">â†©ï¸Ž</span>
@@ -185,7 +185,7 @@
                     <div class="trust-badges">
                         <div class="shipping-info justify-center">
                             <i class="fas fa-truck icon-truck"></i>
-                            <span>Kostenloser Versand & RÃ¼ckversand ab 50&nbsp;â‚¬</span>
+                            <span>Kostenloser Versand &amp; R&uuml;ckversand ab 50&nbsp;&euro;</span>
                         </div>
                         <div class="stock-status">
                             â— Auf Lager, sofort versandfertig
@@ -270,11 +270,13 @@
                         <!-- Vorsicht -->
                         <div class="accordion-item">
                             <button class="accordion-header">
-                                <span><i class="fas fa-exclamation-triangle" style="color:#e67e22;margin-right:0.4rem;"></i>Vorsicht</span>
+                                <span><i class="fas fa-exclamation-triangle"
+                                        style="color:#e67e22;margin-right:0.4rem;"></i>Vorsicht</span>
                                 <i class="fas fa-plus"></i>
                             </button>
                             <div class="accordion-content">
-                                <p style="text-align:center;font-weight:600;letter-spacing:0.03em;line-height:1.8;text-transform:uppercase;font-size:0.9rem;">
+                                <p
+                                    style="text-align:center;font-weight:600;letter-spacing:0.03em;line-height:1.8;text-transform:uppercase;font-size:0.9rem;">
                                     Bis zum Trocknen entz&uuml;ndlich.<br>
                                     Nicht in der N&auml;he von Feuer,<br>
                                     Flammen oder Hitze verwenden<br>
@@ -291,8 +293,9 @@
                                 <i class="fas fa-plus"></i>
                             </button>
                             <div class="accordion-content">
-                                <p>Wir versenden innerhalb von 24 Stunden. Die Lieferzeit betrÃ¤gt 1-3 Werktage.
-                                    Kostenloser Versand und RÃ¼ckversand innerhalb Deutschlands. 30 Tage RÃ¼ckgaberecht.
+                                <p>Wir versenden innerhalb von 24 Stunden. Die Lieferzeit betr&auml;gt 1-3 Werktage.
+                                    Kostenloser Versand und R&uuml;ckversand innerhalb Deutschlands. 30 Tage
+                                    R&uuml;ckgaberecht.
                                 </p>
                             </div>
                         </div>
@@ -316,7 +319,7 @@
 
         <div class="cart-notification">
             <i class="fas fa-fire"></i>
-            <span>Hohe Nachfrage! Deine Bestellung ist fÃ¼r <span id="cart-timer">10:00</span> reserviert.</span>
+            <span>Hohe Nachfrage! Deine Bestellung ist f&uuml;r <span id="cart-timer">10:00</span> reserviert.</span>
         </div>
 
         <div class="shipping-progress-container">
