Fix: repair all corrupted characters in nav, banner, product features and cart

--- a/product.html
+++ b/product.html
@@ -18,28 +18,28 @@
     <div class="top-banner">
         <div class="top-banner-track">
             <div class="top-banner-item">
-                <span class="top-banner-icon">âš¡</span>
-                SCHNELLER VERSAND: 1â€“3 WERKTAGE
+                <span class="top-banner-icon">&#9889;</span>
+                SCHNELLER VERSAND: 1&ndash;3 WERKTAGE
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">ðŸ“¦</span>
+                <span class="top-banner-icon">Ã°Å¸âÂ¦</span>
                 KOSTENLOSER VERSAND &amp; R&Uuml;CKVERSAND AB 50&nbsp;&euro; (DE)
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">â†©ï¸Ž</span>
+                <span class="top-banner-icon">Ã¢â &copy;Ã¯Â¸Å½</span>
                 30 TAGE R&Uuml;CKGABERECHT
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">âš¡</span>
-                SCHNELLER VERSAND: 1â€“3 WERKTAGE
+                <span class="top-banner-icon">Ã¢Å¡Â¡</span>
+                SCHNELLER VERSAND: 1&ndash;3 WERKTAGE
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">ðŸ“¦</span>
+                <span class="top-banner-icon">Ã°Å¸âÂ¦</span>
                 KOSTENLOSER VERSAND &amp; R&Uuml;CKVERSAND AB 50&nbsp;&euro; (DE)
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">â†©ï¸Ž</span>
-                30 TAGE RÃœCKGABERECHT
+                <span class="top-banner-icon">Ã¢â &copy;Ã¯Â¸Å½</span>
+                30 TAGE RÃÅCKGABERECHT
             </div>
         </div>
     </div>
@@ -51,15 +51,15 @@
                 <i class="fas fa-bars"></i>
             </div>
             <a href="index.html" class="logo-container">
-                <span class="logo-main">NÃ˜TE.</span>
+                <span class="logo-main">N&Uuml;TE.</span>
                 <span class="logo-sub">fragrances</span>
             </a>
             <div class="nav-links">
                 <button class="close-menu-btn" onclick="toggleMobileMenu()">&times;</button>
                 <a href="index.html#kollektion-entdecken">Kollektion</a>
-                <a href="frauenduefte.html">FrauendÃ¼fte</a>
-                <a href="herrenduefte.html">HerrendÃ¼fte</a>
-                <a href="ueber-uns.html">Ãœber uns</a>
+                <a href="frauenduefte.html">Frauend&uuml;fte</a>
+                <a href="herrenduefte.html">Herrend&uuml;fte</a>
+                <a href="ueber-uns.html">&Uuml;ber uns</a>
                 <a href="kontakt.html">Kontakt</a>
             </div>
             <div class="nav-icons">
@@ -104,7 +104,7 @@
     <!-- Product Detail -->
     <div class="product-detail-page section">
         <div class="container">
-            <a href="index.html" class="back-link">â† ZurÃ¼ck zur Ãœbersicht</a>
+            <a href="index.html" class="back-link">&larr; Zur&uuml;ck zur &Uuml;bersicht</a>
 
             <div class="detail-container">
                 <!-- Gallery -->
@@ -152,11 +152,11 @@
                     <ul class="benefits-list">
                         <li>
                             <div class="icon-anim anim-float"><i class="fas fa-droplet"></i></div>
-                            <span>Extrait de Parfum (40% Ã–lanteil)</span>
+                            <span>Extrait de Parfum (40% &Ouml;lanteil)</span>
                         </li>
                         <li>
                             <div class="icon-anim anim-pulse"><i class="far fa-clock"></i></div>
-                            <span>HÃ¤lt den ganzen Tag (8h+)</span>
+                            <span>H&auml;lt den ganzen Tag (8h+)</span>
                         </li>
                         <li>
                             <div class="icon-anim anim-wiggle"><i class="fas fa-leaf"></i></div>
@@ -188,7 +188,7 @@
                             <span>Kostenloser Versand &amp; R&uuml;ckversand ab 50&nbsp;&euro;</span>
                         </div>
                         <div class="stock-status">
-                            â— Auf Lager, sofort versandfertig
+                            &#9679; Auf Lager, sofort versandfertig
                         </div>
 
                         <div class="delivery-timeline">
@@ -314,7 +314,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <span>Warenkorb (<span id="cart-count-header">0</span>)</span>
             </div>
-            <button class="close-cart" onclick="toggleCart()">Ã—</button>
+            <button class="close-cart" onclick="toggleCart()">Ãâ</button>
         </div>
 
         <div class="cart-notification">
@@ -324,7 +324,7 @@
 
         <div class="shipping-progress-container">
             <div class="shipping-text" id="shipping-message">
-                Noch 50,00 â‚¬ bis zu kostenlosem Versand
+                Noch 50,00 Ã¢âÂ¬ bis zu kostenlosem Versand
             </div>
             <div class="progress-bar-bg">
                 <div class="progress-bar-fill" id="shipping-progress-bar"></div>
@@ -350,19 +350,19 @@
 
             <div class="summary-row">
                 <span>Zwischensumme</span>
-                <span id="cart-subtotal">0.00 â‚¬</span>
+                <span id="cart-subtotal">0.00 Ã¢âÂ¬</span>
             </div>
             <div class="summary-row" id="discount-row" style="display: none;">
                 <span>Rabatt</span>
-                <span id="cart-discount-amount">-0.00 â‚¬</span>
+                <span id="cart-discount-amount">-0.00 Ã¢âÂ¬</span>
             </div>
             <div class="summary-row">
                 <span>Versand</span>
-                <span id="cart-shipping-cost">4.90 â‚¬</span>
+                <span id="cart-shipping-cost">4.90 Ã¢âÂ¬</span>
             </div>
             <div class="summary-row total-row">
                 <span>Gesamtsumme</span>
-                <span id="cart-total">0.00 â‚¬</span>
+                <span id="cart-total">0.00 &euro;</span>
             </div>
 
             <button class="btn-checkout" onclick="checkout()">
