Fix: logo NØTE. correct, banner icons replaced with safe HTML entities

--- a/product.html
+++ b/product.html
@@ -22,24 +22,24 @@
                 SCHNELLER VERSAND: 1&ndash;3 WERKTAGE
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">Ã°Å¸âÂ¦</span>
+                <span class="top-banner-icon">&#128230;</span>
                 KOSTENLOSER VERSAND &amp; R&Uuml;CKVERSAND AB 50&nbsp;&euro; (DE)
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">Ã¢â &copy;Ã¯Â¸Å½</span>
+                <span class="top-banner-icon">&#8617;</span>
                 30 TAGE R&Uuml;CKGABERECHT
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">Ã¢Å¡Â¡</span>
+                <span class="top-banner-icon">&#9889;</span>
                 SCHNELLER VERSAND: 1&ndash;3 WERKTAGE
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">Ã°Å¸âÂ¦</span>
+                <span class="top-banner-icon">&#128230;</span>
                 KOSTENLOSER VERSAND &amp; R&Uuml;CKVERSAND AB 50&nbsp;&euro; (DE)
             </div>
             <div class="top-banner-item">
-                <span class="top-banner-icon">Ã¢â &copy;Ã¯Â¸Å½</span>
-                30 TAGE RÃÅCKGABERECHT
+                <span class="top-banner-icon">&#8617;</span>
+                30 TAGE R&Uuml;CKGABERECHT
             </div>
         </div>
     </div>
@@ -51,7 +51,7 @@
                 <i class="fas fa-bars"></i>
             </div>
             <a href="index.html" class="logo-container">
-                <span class="logo-main">N&Uuml;TE.</span>
+                <span class="logo-main">N&Oslash;TE.</span>
                 <span class="logo-sub">fragrances</span>
             </a>
             <div class="nav-links">
