Fix(Mobile): optimize product.html layout on very small screens (iPhone 17) and resolve close cart encoding

--- a/product.html
+++ b/product.html
@@ -314,7 +314,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <span>Warenkorb (<span id="cart-count-header">0</span>)</span>
             </div>
-            <button class="close-cart" onclick="toggleCart()">Ãâ</button>
+            <button class="close-cart" onclick="toggleCart()">&times;</button>
         </div>
 
         <div class="cart-notification">
