Fix: change free shipping threshold from 50 to 60 euros across all HTML texts and JS logic

--- a/account.html
+++ b/account.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -166,10 +166,10 @@
     <div class="top-banner">
         <div class="top-banner-track">
             <div class="top-banner-item"><span class="top-banner-icon">⚡</span>SCHNELLER VERSAND: 1–3 WERKTAGE</div>
-            <div class="top-banner-item"><span class="top-banner-icon">📦</span>KOSTENLOSER VERSAND & RÜCKVERSAND AB 50&nbsp;€ (DE)</div>
+            <div class="top-banner-item"><span class="top-banner-icon">📦</span>KOSTENLOSER VERSAND & RÜCKVERSAND AB 60&nbsp;€ (DE)</div>
             <div class="top-banner-item"><span class="top-banner-icon">↩︎</span>30 TAGE RÜCKGABERECHT</div>
              <div class="top-banner-item"><span class="top-banner-icon">⚡</span>SCHNELLER VERSAND: 1–3 WERKTAGE</div>
-            <div class="top-banner-item"><span class="top-banner-icon">📦</span>KOSTENLOSER VERSAND & RÜCKVERSAND AB 50&nbsp;€ (DE)</div>
+            <div class="top-banner-item"><span class="top-banner-icon">📦</span>KOSTENLOSER VERSAND & RÜCKVERSAND AB 60&nbsp;€ (DE)</div>
             <div class="top-banner-item"><span class="top-banner-icon">↩︎</span>30 TAGE RÜCKGABERECHT</div>
         </div>
     </div>
@@ -396,7 +396,7 @@
         <div class="shipping-progress-container">
             <div class="shipping-text">
                 <i class="fas fa-truck"></i>
-                <span id="shipping-message">Noch €50,00 bis zu kostenlosem Versand</span>
+                <span id="shipping-message">Noch 60,00 € bis zu kostenlosem Versand</span>
             </div>
             <div class="progress-bar-bg">
                 <div id="shipping-progress-bar" class="progress-bar-fill" style="width: 0%"></div>
@@ -478,7 +478,7 @@
                     </svg>
                 </div>
                 <h3>SCHNELL UND SICHER</h3>
-                <p>Deutschlandweit kostenloser DHL Versand ab 50€.</p>
+                <p>Deutschlandweit kostenloser DHL Versand ab 60€.</p>
             </div>
             <div class="feature-item">
                 <div class="feature-icon-wrapper">
