--- a/frauenduefte.html
+++ b/frauenduefte.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -18,7 +18,7 @@
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">📦</span>
-                KOSTENLOSER VERSAND & RÜCKVERSAND AB 50&nbsp;€ (DE)
+                KOSTENLOSER VERSAND & RÜCKVERSAND AB 60&nbsp;€ (DE)
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">↩︎</span>
@@ -30,7 +30,7 @@
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">📦</span>
-                KOSTENLOSER VERSAND & RÜCKVERSAND AB 50&nbsp;€ (DE)
+                KOSTENLOSER VERSAND & RÜCKVERSAND AB 60&nbsp;€ (DE)
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">↩︎</span>
@@ -132,7 +132,7 @@
         <div class="shipping-progress-container">
             <div class="shipping-text">
                 <i class="fas fa-truck"></i>
-                <span id="shipping-message">Noch €50,00 bis zu kostenlosem Versand</span>
+                <span id="shipping-message">Noch 60,00 € bis zu kostenlosem Versand</span>
             </div>
             <div class="progress-bar-bg">
                 <div id="shipping-progress-bar" class="progress-bar-fill" style="width: 0%"></div>
