--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -18,7 +18,7 @@
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">📦</span>
-                KOSTENLOSER VERSAND & RÜCKVERSAND AB 50&nbsp;€ (DE)
+                KOSTENLOSER VERSAND & RÜCKVERSAND AB 60&nbsp;€ (DE)
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">↩︎</span>
@@ -30,7 +30,7 @@
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">📦</span>
-                KOSTENLOSER VERSAND & RÜCKVERSAND AB 50&nbsp;€ (DE)
+                KOSTENLOSER VERSAND & RÜCKVERSAND AB 60&nbsp;€ (DE)
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">↩︎</span>
@@ -214,7 +214,7 @@
         <div class="shipping-progress-container">
             <div class="shipping-text">
                 <i class="fas fa-truck"></i>
-                <span id="shipping-message">Noch €50,00 bis zu kostenlosem Versand</span>
+                <span id="shipping-message">Noch 60,00 € bis zu kostenlosem Versand</span>
             </div>
             <div class="progress-bar-bg">
                 <div id="shipping-progress-bar" class="progress-bar-fill" style="width: 0%"></div>
@@ -321,7 +321,7 @@
             <div class="faq-item">
                 <button class="faq-question">Wie lange dauert der Versand? <span class="icon">+</span></button>
                 <div class="faq-answer">
-                    <p>Der Versand erfolgt in der Regel innerhalb von 1-3 Werktagen mit DHL. Ab einem Bestellwert von 50€ ist der Versand kostenlos.</p>
+                    <p>Der Versand erfolgt in der Regel innerhalb von 1-3 Werktagen mit DHL. Ab einem Bestellwert von 60€ ist der Versand kostenlos.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -346,7 +346,7 @@
                     </svg>
                 </div>
                 <h3>SCHNELL UND SICHER</h3>
-                <p>Deutschlandweit kostenloser DHL Versand ab 50€.</p>
+                <p>Deutschlandweit kostenloser DHL Versand ab 60€.</p>
             </div>
             <div class="feature-item">
                 <div class="feature-icon-wrapper">
