--- a/product.html
+++ b/product.html
@@ -23,7 +23,7 @@
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">&#128230;</span>
-                KOSTENLOSER VERSAND &amp; R&Uuml;CKVERSAND AB 50&nbsp;&euro; (DE)
+                KOSTENLOSER VERSAND &amp; R&Uuml;CKVERSAND AB 60&nbsp;&euro; (DE)
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">&#8617;</span>
@@ -35,7 +35,7 @@
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">&#128230;</span>
-                KOSTENLOSER VERSAND &amp; R&Uuml;CKVERSAND AB 50&nbsp;&euro; (DE)
+                KOSTENLOSER VERSAND &amp; R&Uuml;CKVERSAND AB 60&nbsp;&euro; (DE)
             </div>
             <div class="top-banner-item">
                 <span class="top-banner-icon">&#8617;</span>
@@ -185,7 +185,7 @@
                     <div class="trust-badges">
                         <div class="shipping-info justify-center">
                             <i class="fas fa-truck icon-truck"></i>
-                            <span>Kostenloser Versand &amp; R&uuml;ckversand ab 50&nbsp;&euro;</span>
+                            <span>Kostenloser Versand &amp; R&uuml;ckversand ab 60&nbsp;&euro;</span>
                         </div>
                         <div class="stock-status">
                             &#9679; Auf Lager, sofort versandfertig
@@ -324,7 +324,7 @@
 
         <div class="shipping-progress-container">
             <div class="shipping-text" id="shipping-message">
-                Noch 50,00 Ã¢âÂ¬ bis zu kostenlosem Versand
+                Noch 60,00 &euro; bis zu kostenlosem Versand
             </div>
             <div class="progress-bar-bg">
                 <div class="progress-bar-fill" id="shipping-progress-bar"></div>
