--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -110,7 +110,7 @@
         <div class="shipping-progress-container">
             <div class="shipping-text">
                 <i class="fas fa-truck"></i>
-                <span id="shipping-message">Noch €50,00 bis zu kostenlosem Versand</span>
+                <span id="shipping-message">Noch 60,00 € bis zu kostenlosem Versand</span>
             </div>
             <div class="progress-bar-bg">
                 <div id="shipping-progress-bar" class="progress-bar-fill" style="width: 0%"></div>
